--- a/.github/workflows/pipline.yml
+++ b/.github/workflows/pipline.yml
@@ -46,3 +46,25 @@ jobs:
         uses: anothrNick/github-tag-action@eca2b69f9e2c24be7decccd0f15fdb1ea5906598
         env:
           GITHUB_TOKEN: ${{ secrets.TAG_KEY }}
+
+  prod-step:
+    needs: staging-step
+    runs-on: ubuntu-18.04
+    environment: prod
+    steps:
+      - uses: actions/checkout@v2
+      - name: deploy
+        if: ${{ github.event_name == 'push'  }}
+        uses: akhileshns/heroku-deploy@v3.12.12
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: "pokemonaction"
+          heroku_email: "codebook.ng@gmail.com"
+          healthcheck: "https://pokemonaction.herokuapp.com/health"
+          checkstring: "ok"
+      # - uses: actions/checkout@v2
+      - name: Bump version and push tag
+        if: ${{ github.event_name == 'push'  }}
+        uses: anothrNick/github-tag-action@eca2b69f9e2c24be7decccd0f15fdb1ea5906598
+        env:
+          GITHUB_TOKEN: ${{ secrets.TAG_KEY }}
