--- a/.github/workflows/healthcheck.yml
+++ b/.github/workflows/healthcheck.yml
@@ -9,6 +9,7 @@ on:
   
 jobs:
   healthcheck:
+    runs-on: ubuntu-18.04
     steps:
       - name: URL Health Check
         uses: Jtalk/url-health-check-action@v2
