--- a/package.json
+++ b/package.json
@@ -49,9 +49,15 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "eslint-plugin-cypress": "^2.12.1",
     "express": "^4.17.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0"
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:cypress/recommended"
+    ]
   }
 }
