Added github action to check if heroku app is running after deployment as well as endpoints for the checks

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -33,3 +33,5 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: 'pokedex-fso'
           heroku_email: ${{secrets.EMAIL}}
+          healthcheck: 'https://pokedex-fso.herokuapp.com/health'
+          checkstring: 'ok'
