--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -40,3 +40,5 @@ jobs:
           heroku_app_name: "fso-2021-pokedex"
           heroku_email: ${{secrets.EMAIL}}
           healthcheck: "https://fso-2021-pokedex.herokuapp.com/health"
+          checkstring: "ok"
+          rollbackonhealthcheckfailed: true
