--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -36,6 +36,7 @@ jobs:
           start: npm run start-prod
           wait-on: http://localhost:5000
 
+      if: ${{ github.event_name == 'push' }}
       - uses: actions/checkout@v2
       - uses: akhileshns/heroku-deploy@v3.12.12
         with:
