--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -36,12 +36,10 @@ jobs:
           start: npm run start-prod
           wait-on: http://localhost:5000
 
-  deployment:
-    if: ${{ github.event_name == 'push' }}
-    runs-on: ubuntu-18.04
-    steps:
-      - uses: actions/checkout@v2
-      - uses: akhileshns/heroku-deploy@v3.12.12
+      - name: deployment
+        if: ${{ github.event_name == 'push' }}
+        uses: actions/checkout@v2
+        uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "fso-2021-pokedex"
