--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -12,9 +12,9 @@ jobs:
       - name: Say hello
         run: |
           echo "Hello World!" 
-      - name: Now it is (11.4)
+      - name: Now it is
         run: |
           date  
-      - name: Directory content (11.4)
+      - name: Directory content
         run: |
           ls -l  
