Removed double uses

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -41,7 +41,6 @@ jobs:
           checkstring: 'ok'
           rollbackonhealthcheckfailed: true
       - name: send message if deployed successfully
-        uses: actions/checkout@v2
         if: ${{ success() }}
         uses: appleboy/telegram-action@v0.1.1
         with:
@@ -51,6 +50,7 @@ jobs:
       - name: send message if failure
         uses: actions/checkout@v2
         if: ${{ failure() }}
+        uses: appleboy/telegram-action@v0.1.1
         with:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
