--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -12,3 +12,9 @@ jobs:
       - name: Say hello
         run: |
           echo "Hello World!"
+  list_directory:
+    runs-on: ubuntu-18.04
+      steps:
+      - name: list files
+        run: |
+          ls
