--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "Full Stack Open",
   "main": "src/index.js",
   "scripts": {
+    "heroku-prebuild": "npm install --dev",
     "start": "webpack-dev-server --open --mode development",
     "start-prod": "node app.js",
     "test": "jest",
     "eslint": "eslint './**/*.{js,jsx}'",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
   },
   "repository": {
     "type": "git",
