--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start-prod": "node app.js",
     "test": "jest",
     "eslint": "eslint './**/*.{js,jsx}'",
-    "build": "webpack --mode production",
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
