--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "description": "Full Stack Open",
   "main": "src/index.js",
   "scripts": {
-    "start": "webpack-dev-server --port $PORT --host 0.0.0.0",
+    "start": "webpack-dev-server --open --mode development",
     "start-prod": "node app.js",
     "test": "jest",
     "eslint": "eslint './**/*.{js,jsx}'",
-    "build": "webpack --mode production",
-    "heroku-prebuild": "npm install --dev"
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
