--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -34,3 +34,7 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "pokemon-app-jonas" #Must be unique in Heroku
           heroku_email: "youneslamkhanter02@gmail.com"
+          healthcheck: "https://pokemon-app-jonas.herokuapp.com/version"
+          checkString: "1"
+          healthcheck: "https://pokemon-app-jonas.herokuapp.com/health"
+          checkString: "ok"
