--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -39,7 +39,7 @@ jobs:
         uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "YOUR APP's NAME" #Must be unique in Heroku
-          heroku_email: "YOUR EMAIL"
+          heroku_app_name: "pokemon-app-jonas" #Must be unique in Heroku
+          heroku_email: "youneslamkhanter02@gmail.com"
           healthcheck: "https://pokemon-app-jonas.herokuapp.com/version"
           checkString: "1.1.0"
