--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -10,3 +10,7 @@ jobs:
       - name: Say hello
         run: |
           echo "Hello world!"
+      - name: Now it is
+        run: date
+      - name: Directory content
+        run: ls
