--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -40,3 +40,8 @@ jobs:
           heroku_email: "youneslamkhanter02@gmail.com"
           healthcheck: "https://pokemon-app-jonas.herokuapp.com/version"
           checkString: "1.1.0"
+      - name: Bump version and push tag
+        if: ${{ github.event_name == 'push' }}
+        uses: anothrNick/github-tag-action@1.33.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
