--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -51,7 +51,7 @@ jobs:
         with:
           status: ${{ job.status }}
           author_name: Jonas # default: 8398a7@action-slack
-          fields: code # default: repo,commit
+          fields: repo,message,commit,author,action,workflow # default: repo,commit
           mention: here
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
