--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   hello_world_job:
-    runs_on: ubuntu-18.04
+    runs-on: ubuntu-18.04
     steps:
       - name: Say Hello
         run: |
