--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -14,8 +14,7 @@ jobs:
           echo "Hello World!"
       - name: Tell date
         run: |
-          echo date
+          date
       - name: List files
         run: |
-          echo ls -la
-          
+          ls -la
