--- a/.github/workflows/TelegramNotification.yml
+++ b/.github/workflows/TelegramNotification.yml
@@ -13,4 +13,4 @@ jobs:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
           message: New push event occured
-          repo: ${{ GITHUB_REPOSITORY }}
+          GITHUB_REPOSITORY: repo
