--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -28,5 +28,5 @@ jobs:
       - uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: 'lbotano-fso-pockedex'
+          heroku_app_name: 'lbotano-fso-pokedex'
           heroku_email: 'otanolautarob@gmail'
