--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,3 +31,5 @@ jobs:
           heroku_app_name: 'lbotano-fso-pokedex'
           heroku_email: 'otanolautarob@gmail'
           healthcheck: 'https://lbotano-fso-pokedex.herokuapp.com/health'
+          checkstring: 'ok'
+          rollbackonhealthcheckfailed: true
