--- a/.github/workflows/TelegramNotification.yml
+++ b/.github/workflows/TelegramNotification.yml
@@ -13,3 +13,4 @@ jobs:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
           message: New push event occured ${{ github.repository	 }}.
+          disable_web_page_preview: true
