--- a/.github/workflows/TelegramNotification.yml
+++ b/.github/workflows/TelegramNotification.yml
@@ -6,11 +6,10 @@ jobs:
     name: Push notification
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
       - name: send custom message with args
+        uses: actions/checkout@master
         uses: appleboy/telegram-action@master
         with:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
-          message: New push event occured ${{ github.repository	 }}.
-          disable_web_page_preview: true
+          # disable_web_page_preview: true
