--- a/.github/workflows/TelegramNotification.yml
+++ b/.github/workflows/TelegramNotification.yml
@@ -6,8 +6,8 @@ jobs:
     name: Push notification
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@master
       - name: send custom message with args
-        uses: actions/checkout@master
         uses: appleboy/telegram-action@master
         with:
           to: ${{ secrets.TELEGRAM_TO }}
