--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -10,11 +10,10 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node
+      - uses: actions/setup-node@v1
         with: 
           node-version: '12.x'
       - name: npm install
         run: npm install
       - name: lint
         run: npm run eslint
-        
