--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "webpack --mode production",
     "cypress:open": "cypress open",
     "start:test": "cross-env NODE_ENV=test node app.js",
-    "test:e2e": "npm start"
+    "test:e2e": "cypress run"
   },
   "repository": {
     "type": "git",
