--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -47,4 +47,4 @@ jobs:
         if: ${{github.event_name == 'push'}}
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-          DEFAULT_BUMP: 'minor'
+          DEFAULT_BUMP: 'patch'
