--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -30,7 +30,7 @@ jobs:
           wait-on: http://localhost:5000
       - name: Deploy to Heroku
         uses: akhileshns/heroku-deploy@v3.12.12
-        if: ${{github.event_name == 'push'}}
+        if: ${{ github.event_name == 'push' && contains(join(toJson(github.event.commits.*.message), ''), '#skip') }}
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: 'lbotano-fso-pokedex'
@@ -44,7 +44,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Bump version and push tag
         uses: anothrNick/github-tag-action@1.33.0
-        if: ${{github.event_name == 'push'}}
+        if: ${{ github.event_name == 'push' && contains(join(toJson(github.event.commits.*.message), ''), '#skip') }}
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
           DEFAULT_BUMP: 'patch'
