--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -2,6 +2,9 @@ obs:
   simple_deployment_pipeline:
     runs-on: ubuntu-18.04
     steps:
+      - name: Start
+        run: |
+          echo "Tehtävä 11.5" 
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
