--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -11,12 +11,18 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: '12.x'
-      - name: npm install 
-        run: npm install  
+          node-version: "12.x"
+      - name: npm install
+        run: npm install
       - name: lint
         run: npm run eslint
-      - name: build 
+      - name: build
         run: npm run build
       - name: test
         run: npm test
+      - name: e2e tests
+        uses: cypress-io/github-action@v2
+        with:
+          command: npm run test:e2e
+          start: npm run start-prod
+          wait-on: http://localhost:8080
