--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,6 +21,11 @@ jobs:
         run: npm run test
       - name: run build
         run: npm run 
+      - uses: akhileshns/heroku-deploy@v3.12.12
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: "sirr-pokedex"
+          heroku_email: "riku.sarlin@gmail.com"
 #      - name: e2e tests
 #        uses: cypress-io/github-action@v2
 #        with:
