--- a/package.json
+++ b/package.json
@@ -32,27 +32,27 @@
     "@babel/preset-react": "^7.9.4",
     "@testing-library/jest-dom": "^5.8.0",
     "@testing-library/react": "^10.0.4",
-    "babel-jest": "^25.5.1",
+    "babel-jest": "^27.2.5",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.5.3",
     "cypress": "^8.4.1",
-    "eslint": "^6.8.0",
+    "eslint": "^8.0.1",
     "eslint-plugin-jest": "^23.11.0",
     "eslint-plugin-react": "^7.19.0",
     "html-loader": "^1.1.0",
-    "html-webpack-plugin": "^4.3.0",
-    "jest": "^25.5.4",
+    "html-webpack-plugin": "^5.2.0",
+    "jest": "^27.2.5",
     "style-loader": "^1.2.1",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0"
+    "webpack": "^5.58.2",
+    "webpack-cli": "^4.9.0"
   },
   "dependencies": {
-    "axios": "^0.19.2",
+    "axios": "^0.23.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "webpack-dev-server": "^4.3.1"
   }
 }
