--- a/package.json
+++ b/package.json
@@ -43,8 +43,7 @@
     "html-webpack-plugin": "^5.2.0",
     "jest": "^27.2.5",
     "style-loader": "^1.2.1",
-    "webpack": "^5.58.2",
-    "webpack-cli": "^4.9.0"
+    "webpack": "^5.58.2"
   },
   "dependencies": {
     "axios": "^0.23.0",
@@ -53,6 +52,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "webpack-dev-server": "^4.3.1"
+    "webpack-dev-server": "^4.3.1",
+    "webpack-cli": "^4.9.0"
   }
 }
