--- a/package.json
+++ b/package.json
@@ -33,16 +33,11 @@
     "@testing-library/jest-dom": "^5.8.0",
     "@testing-library/react": "^10.0.4",
     "babel-jest": "^27.2.5",
-    "babel-loader": "^8.1.0",
-    "css-loader": "^3.5.3",
     "cypress": "^8.4.1",
     "eslint": "^8.0.1",
     "eslint-plugin-jest": "^23.11.0",
     "eslint-plugin-react": "^7.19.0",
-    "html-loader": "^1.1.0",
-    "html-webpack-plugin": "^5.2.0",
-    "jest": "^27.2.5",
-    "style-loader": "^1.2.1"
+    "jest": "^27.2.5"
   },
   "dependencies": {
     "axios": "^0.23.0",
@@ -53,6 +48,11 @@
     "react-router-dom": "^5.2.0",
     "webpack-dev-server": "^4.3.1",
     "webpack-cli": "^4.9.0",
-    "webpack": "^5.58.2"
+    "webpack": "^5.58.2",
+    "html-loader": "^1.1.0",
+    "html-webpack-plugin": "^5.2.0",
+    "style-loader": "^1.2.1",
+    "babel-loader": "^8.1.0",
+    "css-loader": "^3.5.3"
   }
 }
