--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -8,3 +8,6 @@ jobs:
         uses: actions/checkout@v2
       - name: Cypress run
         uses: cypress-io/github-action@v2
+        with:
+            start: npm run start-prod
+
