--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -12,7 +12,5 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v2
         with:
-            command: npm run cypress:open
-            start: npm run start-prod
-            wait-on: http://localhost:5000
+              browser: chrome
 
