--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -1,8 +1,5 @@
 name: End-to-end tests
-on:
-  push:
-    branches:
-      - master
+on: [push]
 jobs:
   cypress-run:
     runs-on: ubuntu-20.04
@@ -11,5 +8,3 @@ jobs:
         uses: actions/checkout@v2
       - name: Cypress run
         uses: cypress-io/github-action@v2
-
-
