--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -1,10 +1,18 @@
-name: End-to-end tests
+name: Cypress Tests
+
 on: [push]
+
 jobs:
   cypress-run:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      # Install NPM dependencies, cache them correctly
+      # and run all Cypress tests
       - name: Cypress run
         uses: cypress-io/github-action@v2
+        with:
+            command: npm run cypress:open
+            start: npm run start-prod
+            wait-on: http://localhost:5000
