--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,6 +21,11 @@ jobs:
         run: npm run build
       - name: test
         run: npm test
+      - uses: akhileshns/heroku-deploy@v3.12.12 
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: "yinjiecicd" 
+          heroku_email: "yinjie0177@gmail.com"
 
       
 
