--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -26,6 +26,7 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "yinjiecicd" 
           heroku_email: "yinjie0177@gmail.com"
+          healthcheck: "https://[yinjiecicd].herokuapp.com/health"
 
       
 
