--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -27,6 +27,7 @@ jobs:
           heroku_app_name: "yinjiecicd" 
           heroku_email: "yinjie0177@gmail.com"
           healthcheck: "https://yinjiecicd.herokuapp.com/health"
+          rollbackonhealthcheckfailed: true
 
       
 
