Exercise 11.11 added health check and version endpoints

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -33,3 +33,4 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "sirr-pokedex"
           heroku_email: "riku.sarlin@gmail.com"
+          healthcheck: "https://sirr-pokedex.herokuapp.com/health"
