Exercise 11.12 added rollback to failed build

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -35,3 +35,4 @@ jobs:
           heroku_email: "riku.sarlin@gmail.com"
           healthcheck: "https://sirr-pokedex.herokuapp.com/health"
           checkstring: "ok"
+          rollbackonhealthcheckfailed: true
