--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -12,3 +12,11 @@ jobs:
       - name: Say hello
         run: |
           echo "Hello World!"
+    steps:
+      - name: Print date
+        run: |
+          date
+    steps:
+      - name: Show directory contents in long format
+        run: |
+          ls -l
