--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -12,3 +12,10 @@ jobs:
       - name: Say Hello
         run: |
           echo "hello world"
+      - name: Now is it
+        run: | 
+          date
+      - name: directory content
+        run: |
+          ls  
+  
