--- a/.github/workflows/heroku.yml
+++ b/.github/workflows/heroku.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - name: Say Hello
         run: |
-          echo ${{secrets.HEROKU_LOGIN_TOKEN}}
+          echo "secret: ${{secrets.HEROKU_LOGIN_TOKEN}}"
       - uses: actions/checkout@v2
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
