--- a/.github/workflows/heroku.yml
+++ b/.github/workflows/heroku.yml
@@ -9,10 +9,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Deploy
       - uses: actions/checkout@v2
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: 'aaltopart11' #Must be unique in Heroku
+          heroku_app_name: "aaltopart11" #Must be unique in Heroku
           heroku_email: "massimo.bertocchi@aalto.fi"
