--- a/.github/workflows/heroku.yml
+++ b/.github/workflows/heroku.yml
@@ -22,3 +22,9 @@ jobs:
           healthcheck: 'https://aaltopart11.herokuapp.com/health'
           checkstring: 'ok' 
           rollbackonhealthcheckfailed: true
+      - name: bump version and push tag
+        uses: anothrNick/github-tag-action@1.33.0
+        if: ${{ github.event_name == 'push' }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DEFAULT_BUMP: patch
